stopgap

--- a/client/src/components/Allocations/AllocationsTables.module.scss
+++ b/client/src/components/Allocations/AllocationsTables.module.scss
@@ -1,7 +1,7 @@
 .root {
   /* title */     tr > *:nth-child(1) { width: 13%; }
   /* pi */        tr > *:nth-child(2) { width: 20%; }
-  /* team */      tr > *:nth-child(3) { width: 7%; }
+  /* team */      tr > *:nth-child(3) { width: 15%; }
   /* systems */   tr > *:nth-child(4) { width: 18%; }
   /* awarded */   tr > *:nth-child(5) { width: 14%; }
   /* remaining */ tr > *:nth-child(6) { width: 14%; }
